<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".SubmitActivity">

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/et_background"
        android:hint="@string/tv_hint_first_name"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/etLastName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:foregroundTint="@color/colorAccent"
        android:keyboardNavigationCluster="true"
        app:layout_constraintTop_toBottomOf="@+id/hr" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/et_background"
        android:hint="@string/tv_hint_last_name"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="60dp"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/etFirstName"
        app:layout_constraintTop_toBottomOf="@+id/hr" />
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/et_background"
        android:hint="@string/tv_hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorPrimary"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:textColorHint="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName"
         />
    <EditText
        android:id="@+id/etGithubLink"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/et_background"
        android:hint="@string/et_hint_github_link"
        android:inputType="textUri"
        android:paddingStart="10dp"
        android:paddingEnd="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:textColorHint="@color/colorPrimary"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/btn_submit"
        android:textAllCaps="false"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etGithubLink"/>

    <ImageView
        android:id="@+id/hr"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_gradient"
        android:gravity="center_horizontal"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@+id/tvSubmission" />

    <TextView
        android:id="@+id/tvSubmission"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/tv_project_submission"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_submit" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back_arrow"
        android:gravity="center_horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            >

            <ImageView
                android:id="@+id/icon_code"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:src="@drawable/google_dev_icon"
                />

            <TextView
                android:id="@+id/tvGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/icon_code"
                android:text="@string/tv_google"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAfrica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/tvGoogle"
                android:text="@string/tv_africa"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvDeveloper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvGoogle"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/icon_code"
                android:text="@string/tv_developer_scholarship"
                android:textSize="20sp" />


        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

</androidx.constraintlayout.widget.ConstraintLayout>